--- a/mission2RyanPinkney/wwwroot/index.html
+++ b/mission2RyanPinkney/wwwroot/index.html
@@ -64,7 +64,7 @@ This is the index html page which will display all the requirements of the page.
     <!--Import the different js files to my index page.-->
     <script src="lib/jquery/jquery-3.6.0.min.js"></script>
     <script src="js/gradecalculator.js"></script>
-<!--This is a git test-->
+ <!--Git hub test-->
 
 </body>
 </html>
