--- a/mission2RyanPinkney/wwwroot/index.html
+++ b/mission2RyanPinkney/wwwroot/index.html
@@ -65,6 +65,7 @@ This is the index html page which will display all the requirements of the page.
     <script src="lib/jquery/jquery-3.6.0.min.js"></script>
     <script src="js/gradecalculator.js"></script>
  <!--Git hub test-->
+    <!--Git hub test 2-->
 
 </body>
 </html>
